aniadi una pequenia instruccion para correrlo de una

--- a/readme
+++ b/readme
@@ -1,1 +1,1 @@
-Pracotica.
+Para correr el programa ejecute en la terminal del archivo principal 'npm run dev' eso correra tanto el server como el client
